--- a/pillo.html
+++ b/pillo.html
@@ -14,12 +14,13 @@
       <h6>Dellina, Zack, Pierre</h6>
       <hr>
       <h4>History</h4>
+      <p>CEO & Co-Founder- Emanuele Musini <br> CFO & Co-Founder- James Wyman</p>
       <p>The Pillo robot started in July 12th 2016 and it started selling in 2018. It started as an idea because one of the Co-Founders struggled to take care of one of his loved ones. Pillo is intended to help individuals with chronic conditions to continue their medication schedule and health using a built-in voice assistant to communicate with patients and caregivers.</p>
       <h5>Partnership between Pillo and Black+decker</h5>
       <p>Pria by Black+Decker and Pillo Health’s partnership was announced to further the company's common mission to help adults and their caregivers independently and proactively manage their healthcare at home. This partnership was accomplished by Stanley Healthcare, which demonstrated innovation solutions and technology for safer and more secure and more efficient care in senior living. Pillo is based in Boston, MA with an engineering team in Genova, Italy. Developer's of both Pillo and Pria by Black+Decker, connects between patients, the care team, and health organizations. </p>
-      <h4>Inspiration</h4>
+      <h5>Inspiration</h5>
       <p>Elderly people have trouble taking care of themselves at home, especially keeping track of their medications. Most Adults would like to age in the comfort of their own home but doing without the proper support can be dangerous and it was this concern that inspired the creation of the Pillo Robot.</p>
-      <h4>Functionalities</h4>
+      <h5>Functionalities</h5>
 
       <ul> <!-- Un-ordered lists-->
         <li>- Dispensing pills</li>
