--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row">
       <h3>Machine learning and A.I. in psychiatry</h3>
-      <h6 class="right-align">Dellina, Zach, Pierre</h6>
+      <h6 class="right-align">Dellina, Zack, Pierre</h6>
       <hr>
     </div>
     <div class="row">
