--- a/pillo.html
+++ b/pillo.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
   <title>Github Project - Pillo</title>
 </head>
 <body>
   <div class="container">
     <div class="row">
-      <h3>Machine learning and AI in Psychiatry</h3>
-      <h6>Dellina, Zack, Pierre</h6>
+      <h3>Machine learning and A.I. in Psychiatry</h3>
+      <h6 class="right-align">Dellina, Zack, Pierre</h6>
       <hr>
       <h4>History</h4>
       <p>CEO & Co-Founder- Emanuele Musini <br> CFO & Co-Founder- James Wyman</p>
@@ -40,8 +42,7 @@
         <li>- Jokes</li>
         <li>- Weather</li>
         <li>- Playing the radio</li>
-    </ul>
-
+      </ul>
     </div>
   </div>
 </body>
