--- a/social_impact.html
+++ b/social_impact.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>github</title>
 </head>
 <body>
+    <h4>Social Impact</h4>
     <p>-Distributes medication with user input and facial recognition</p>
     <p>-Pillo is intended to help seniors remember to take their meds</p>
     <p>-Pill dispensing</p>
