--- a/social_impact.html
+++ b/social_impact.html
@@ -11,18 +11,25 @@
 </head>
 <body>
   <div class="container">
-    <p>-Distributes medication with user input and facial recognition</p>
-    <p>-Pillo is intended to help seniors remember to take their meds</p>
-    <p>-Pill dispensing</p>
-    <p id="indent">-Caregivers can insert medication and robot will dispense it everyday into a small cup</p>
-    <p>-General interactivity</p>
-    <p id="indent">-Weather, jokes, educational videos, surveys, connects with other devices in the home</p>
-    <p>-Smart Skills to track weight, fit bits to track steps…</p>
-    <p>-Beneficial for health care providers or organizations</p>
-    <p id="indent">-Tracks how the patient is feeling everyday, their mood, record segments of voice to analyze tone</p>
-    <p>-Beneficial for patient to see how much they are engaged with their health and how they are feeling and if risky situations arise</p>
-    <p id="indent">-If a situation occurs it will send an alert to the caregiver through an app or healthcare organization</p>
-    <p>-Allows them to check in through video</p>
+    <div class="row">
+      <h3>Machine learning and A.I. in psychiatry</h3>
+      <h6 class="right-align">Dellina, Zack, Pierre</h6>
+      <hr>
+    </div>
+    <div class="row">
+      <p>-Distributes medication with user input and facial recognition</p>
+      <p>-Pillo is intended to help seniors remember to take their meds</p>
+      <p>-Pill dispensing</p>
+      <p id="indent">-Caregivers can insert medication and robot will dispense it everyday into a small cup</p>
+      <p>-General interactivity</p>
+      <p id="indent">-Weather, jokes, educational videos, surveys, connects with other devices in the home</p>
+      <p>-Smart Skills to track weight, fit bits to track steps…</p>
+      <p>-Beneficial for health care providers or organizations</p>
+      <p id="indent">-Tracks how the patient is feeling everyday, their mood, record segments of voice to analyze tone</p>
+      <p>-Beneficial for patient to see how much they are engaged with their health and how they are feeling and if risky situations arise</p>
+      <p id="indent">-If a situation occurs it will send an alert to the caregiver through an app or healthcare organization</p>
+      <p>-Allows them to check in through video</p>
+    </div>
   </div>
 
     
