updated social impact

--- a/social_impact.html
+++ b/social_impact.html
@@ -17,6 +17,10 @@
       <hr>
     </div>
     <div class="row">
+    
+      <p>The Pollo robot targets the elder population to help manage their medication and monitor their treatment. It is a solution to help perform these tasks and help get in touch with; doctors, caregivers, and family members. In the U.S there are roughly 40 - 45 million unpaid caregivers like sons and daughters looking for a better way to care for their elders. Pollo is a product to help give medication and allows a strong connection between caregiver and patient.</p>
+      <p>-The robot will not take any video of the user when taking their medication due to legal compliance issues. But, the system will know who was in front of the device and the time the medication was dispensed.</p>
+      <p>-Pillo allows facial recognition to confirm and validate its the correct end user. </p>
       <p>-Distributes medication with user input and facial recognition</p>
       <p>-Pillo is intended to help seniors remember to take their meds</p>
       <p>-Pill dispensing</p>
