edit footer and added youtube

--- a/pillo.html
+++ b/pillo.html
@@ -15,6 +15,7 @@
       <h3>Machine learning and A.I. in Psychiatry</h3>
       <h6 class="right-align">Dellina, Zack, Pierre</h6>
       <hr>
+      <p class="center"><a href="index.html">Introduction</a> | <a href="pillo.html">Pillo Health</a> | <a href="social_impact.html">Social Impact</a></p>
       <h4>History</h4>
       <p>CEO & Co-Founder- Emanuele Musini <br> CFO & Co-Founder- James Wyman</p>
       <p id="indent">The Pillo robot started in July 12th 2016 and it started selling in 2018. It started as an idea because one of the Co-Founders struggled to take care of one of his loved ones. Pillo is intended to help individuals with chronic conditions to continue their medication schedule and health using a built-in voice assistant to communicate with patients and caregivers.</p>
@@ -45,5 +46,9 @@
       </ul>
     </div>
   </div>
+  <hr>
+  <footer class="center">
+    ITC-134 SP20 | May 26, 2020
+  </footer>
 </body>
 </html>
