--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <h3>Machine learning and A.I. in psychiatry</h3>
       <h6 class="right-align">Dellina, Zack, Pierre</h6>
       <hr>
+      <p class="center"><a href="index.html">Introduction</a> | <a href="pillo.html">Pillo Health</a> | <a href="social_impact.html">Social Impact</a></p>
     </div>
     <div class="row">
+      <h4>Introduction</h4>
       <p class="col s8" id="indent">In the recent years, mental health awareness has been expressed more. The advancements of machine learning and artificial intelligence can highly benefit psychiatry and mental health studies. The ermergence of A.I. could not only mean drastic change in diagnosis but also how we will look at a disorder. Neuroscientist Elvevåg said: “Humans are not perfect. They can get distracted and sometimes miss out on subtle speech cues and warning signs". With this technology we could detect disorders early, flag risks, and predict assistance. In a trial at Vanderbilt University, their machine learning algorithm was 84% accurate at predicting whether someone would attempt suicide in the following week, and 80% accurate predicting whether they would within the next 2 years.</p>
       <img src="https://images.unsplash.com/photo-1581333100576-b73befd79a9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="mental health wall" class="col s4">
     </div>
