--- a/social_impact.html
+++ b/social_impact.html
@@ -15,27 +15,19 @@
       <h3>Machine learning and A.I. in psychiatry</h3>
       <h6 class="right-align">Dellina, Zack, Pierre</h6>
       <hr>
+      <p class="center"><a href="index.html">Introduction</a> | <a href="pillo.html">Pillo Health</a> | <a href="social_impact.html">Social Impact</a></p>
     </div>
     <div class="row">
-    
-      <p>The Pollo robot targets the elder population to help manage their medication and monitor their treatment. It is a solution to help perform these tasks and help get in touch with; doctors, caregivers, and family members. In the U.S there are roughly 40 - 45 million unpaid caregivers like sons and daughters looking for a better way to care for their elders. Pollo is a product to help give medication and allows a strong connection between caregiver and patient.</p>
-      <p>-The robot will not take any video of the user when taking their medication due to legal compliance issues. But, the system will know who was in front of the device and the time the medication was dispensed.</p>
-      <p>-Pillo allows facial recognition to confirm and validate its the correct end user. </p>
-      <p>-Distributes medication with user input and facial recognition</p>
-      <p>-Pillo is intended to help seniors remember to take their meds</p>
-      <p>-Pill dispensing</p>
-      <p id="indent">-Caregivers can insert medication and robot will dispense it everyday into a small cup</p>
-      <p>-General interactivity</p>
-      <p id="indent">-Weather, jokes, educational videos, surveys, connects with other devices in the home</p>
-      <p>-Smart Skills to track weight, fit bits to track steps…</p>
-      <p>-Beneficial for health care providers or organizations</p>
-      <p id="indent">-Tracks how the patient is feeling everyday, their mood, record segments of voice to analyze tone</p>
-      <p>-Beneficial for patient to see how much they are engaged with their health and how they are feeling and if risky situations arise</p>
-      <p id="indent">-If a situation occurs it will send an alert to the caregiver through an app or healthcare organization</p>
-      <p>-Allows them to check in through video</p>
+      <h4>Social Impact</h4>
+      <p id="indent">The Pollo robot targets the elder population to help manage their medication and monitor their treatment. It is a solution to help perform these tasks and help get in touch with; doctors, caregivers, and family members. In the U.S there are roughly 40 - 45 million unpaid caregivers like sons and daughters looking for a better way to care for their elders. Pollo is a product to help give medication and allows a strong connection between caregiver and patient.</p>
+    </div>
+    <div class="row center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/iJSUlirGc68" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
-
-    
+  <hr>
+  <footer class="center">
+    ITC-134 SP20 | May 26, 2020
+  </footer>
 </body>
 </html>
